# quantquill

./: .gitignore  README.md  pyproject.toml  requirements.txt
alpha-dashboard/: package-lock.json
alpha-dashboard/src/services/: api.ts
alpha-server/routers/: health_router.py
apps/alpha-dashboard/: index.html  package.json  vite.config.ts
apps/alpha-dashboard/src/: App.tsx  main.tsx
apps/alpha-dashboard/src/components/: ChartPanel.tsx  InstrumentsTable.tsx  MetricsTable.tsx  Sidebar.tsx  StatCard.tsx  StrategyPanel.tsx  TradesTable.tsx
apps/alpha-dashboard/src/pages/: DashboardPage.tsx  InstrumentsPage.tsx
apps/alpha-dashboard/src/services/: api.ts
apps/alpha-dashboard/src/types/: index.ts
quant-quill/: .gitignore  LICENSE  MANIFEST.in  requirements.txt  setup.py
quant-quill/quantquill/: cli.py
quant-quill/quantquill/av_core/: __init__.py
quant-quill/quantquill/data/: __init__.py
quant-quill/quantquill/data/angel_one/: __init__.py
quant-quill/quantquill/data/angel_one/platform/: BackTestStrategyPlatform.py
quant-quill/quantquill/strats/: __init__.py
quantquill/: __init__.py
quantquill/av_core/components/: PositionManager.py
quantquill/data/angel_one/platform/: BackTestStrategyPlatform.py
quantquill/data/angel_one/utils/: SmartAPIWithInstruments.py
quantquill/scripts/: save_prices.py
quantquill/strats/: BaseStrat.py  MovingAverageCrossover.py
src/av_core/: app.py  cred_reader.py  logger.py
src/av_core/components/: PositionManager.py
src/data/angel_one/: SmartAPIWithInstruments.py  app.py  constants.py  query.py
src/data/angel_one/examples/: priceLoggerApp.py
src/data/angel_one/platform/: BackTestStrategyPlatform.py
src/data/angel_one/utils/: SmartAPIWithInstruments.py  app.py
src/data/av_massive/: query.py
src/scripts/: save_prices.py
src/strats/: BaseStrat.py  MovingAverageCrossover.py
src/strats/smartapi/: BackTestStrategyPlatform.py  BackTestedStrat.py
test/: test_av.py  test_massive.py
test/av_core/components/: test_PositionManager.py
test/data/angel_one/: SmartAPIWithInstruments.py  test_SmartAPIWithInstruments.py
test/test_quantquill/av_core/components/: test_PositionManager.py
