[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantquill"
version = "0.1.0"
description = "A comprehensive quantitative trading framework with strategy backtesting and execution capabilities"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "jaskirat1208", email = "jaskirat@example.com"}
]
maintainers = [
    {name = "jaskirat1208", email = "jaskirat@example.com"}
]
keywords = ["trading", "quantitative", "backtesting", "strategies", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.8"
dependencies = [
    "smartapi-python>=1.5.5",
    "plotly>=6.6.0",
    "pandas>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/jaskirat1208/quantquill"
Documentation = "https://quantquill.readthedocs.io/"
Repository = "https://github.com/jaskirat1208/quantquill.git"
"Bug Tracker" = "https://github.com/jaskirat1208/quantquill/issues"

[project.scripts]
quantquill = "quantquill.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["quantquill*"]
exclude = ["test*"]

[tool.setuptools.package-data]
quantquill = ["*.json", "*.yaml", "*.yml", "*.txt"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
